--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -2,6 +2,16 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: "lol_regular";
+  src: url(../../font/lol_regular.ttf);
+}
+
+@font-face {
+  font-family: "nanum";
+  src: url(../../font/NanumGothic-Regular.ttf);
+}
+
 .login_container {
   display: flex;
   margin: auto;
@@ -26,6 +36,68 @@
   text-align: center;
 }
 
+.title {
+  font-family: "lol_regular";
+  font-size: 3.5rem;
+  color: black;
+  margin: 2rem 0.5rem;
+  height: 7rem;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 20%;
+  align-items: center;
+  justify-content: center;
+}
+
+.email,
+.password {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.input_email,
+.input_password {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 3rem;
+  border: none;
+  background-color: lightgray;
+  border-radius: 4px;
+  font-size: 1rem;
+  margin: 0.8rem 0;
+}
+
+.BtnLogin {
+  display: flex;
+  padding: 2rem 2rem;
+  border-radius: 4px;
+  border: none;
+  background-color: lightsteelblue;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 4rem;
+  font-family: "lol_regular";
+}
+
+.signup_link {
+  font-family: "nanum";
+  margin-top: 1.5rem;
+}
+
+.input_email::placeholder {
+  color: gray;
+}
+
 .LoginImage {
   width: 50%;
   overflow: hidden;
@@ -38,4 +110,5 @@
 .social_login {
   display: flex;
   flex-direction: column;
+  margin-top: 2rem;
 }
