--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -12,6 +12,11 @@
   src: url(../../font/NanumGothic-Regular.ttf);
 }
 
+@font-face {
+  font-family: "nanum_bold";
+  src: url(../../font/NanumGothic-Bold.ttf);
+}
+
 .login_container {
   display: flex;
   margin: auto;
@@ -38,10 +43,11 @@
 
 .title {
   font-family: "lol_regular";
-  font-size: 3.5rem;
+  font-size: 3.7rem;
   color: black;
-  margin: 2rem 0.5rem;
+  margin: 3rem 0.5rem;
   height: 7rem;
+  letter-spacing: -7px;
 }
 
 .form {
@@ -51,6 +57,7 @@
   height: 20%;
   align-items: center;
   justify-content: center;
+  margin-top: 2.5rem;
 }
 
 .email,
@@ -70,7 +77,7 @@
   width: 100%;
   height: 3rem;
   border: none;
-  background-color: lightgray;
+  background-color: rgba(121, 124, 128, 0.123);
   border-radius: 4px;
   font-size: 1rem;
   margin: 0.8rem 0;
@@ -78,20 +85,31 @@
 
 .BtnLogin {
   display: flex;
-  padding: 2rem 2rem;
-  border-radius: 4px;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
   border: none;
-  background-color: lightsteelblue;
+  background-color: transparent;
   cursor: pointer;
   align-items: center;
   justify-content: center;
   margin-bottom: 4rem;
   font-family: "lol_regular";
+  font-size: 2rem;
+  transition: all 100ms ease-in;
+  margin-top: 0.5rem;
+  border: 2px solid lightgray;
+}
+
+.BtnLogin:hover {
+  color: red;
+  border: none;
+  transform: scale(1.3);
 }
 
 .signup_link {
   font-family: "nanum";
-  margin-top: 1.5rem;
+  margin-top: 2rem;
+  margin-bottom: 0;
 }
 
 .input_email::placeholder {
@@ -111,4 +129,36 @@
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
+}
+
+.BtnGoogleLogin,
+.BtnGithubLogin {
+  display: inline-flex;
+  padding: 0.5rem 3rem;
+  margin: 0.5rem;
+  border: 1.5px solid lightgray;
+  border-radius: 8px;
+  background-color: transparent;
+  font-size: 1.1rem;
+  font-family: "nanum_bold";
+  letter-spacing: 2px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transition: all 100ms ease;
+  vertical-align: middle;
+}
+
+.BtnGoogleLogin:hover,
+.BtnGithubLogin:hover {
+  transform: scale(1.05);
+}
+
+.icon_google,
+.icon_github {
+  margin-right: 0.5rem;
+  font-size: 1.5rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
