Make sign up function work well

--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -112,8 +112,10 @@
   margin-bottom: 0;
 }
 
-.input_email::placeholder {
+.input_email::placeholder,
+.input_password::placeholder {
   color: gray;
+  padding-left: 1rem;
 }
 
 .LoginImage {
