--- a/src/components/dropdownmenu/dropdownmenu.module.css
+++ b/src/components/dropdownmenu/dropdownmenu.module.css
@@ -2,6 +2,13 @@
   position: relative;
 }
 
+.ChamContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
 .BtnDropdown {
   display: flex;
   width: 4rem;
@@ -13,6 +20,8 @@
   border: none;
   transition: all 150ms ease;
   cursor: pointer;
+
+  color: gray;
 }
 
 .BtnDropdown:hover {
@@ -33,6 +42,11 @@
 
 .cham:hover {
   transform: scale(1.12);
+}
+
+.selectedCham {
+  width: 3rem;
+  height: 3rem;
 }
 
 .deck {
