--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -5,9 +5,32 @@
   box-shadow: 6px 6px 2px 1px rgba(55, 55, 59, 0.2);
 }
 
+.name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0.3rem;
+}
+
 .selected_cham {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-left: 0.5rem;
+  height: 3rem;
+  align-items: center;
+}
+
+.cham_title {
+  position: relative;
+  display: flex;
+  font-size: 1rem;
+  margin: 0.3rem 0.5rem;
+}
+
+.item_title {
+  position: relative;
+  display: flex;
+  font-size: 1rem;
+  margin: 1rem 0.5rem;
 }
