--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,36 +1,37 @@
 .card {
-  width: 41rem;
-  height: 20rem;
-  border-radius: 0.5rem;
-  box-shadow: 6px 6px 2px 1px rgba(55, 55, 59, 0.2);
+  width: 100%;
+  height: 100vh;
 }
 
-.name {
+.card_board {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  margin: 0.3rem;
+  width: 100%;
+  height: 100%;
 }
 
-.selected_cham {
-  display: flex;
-  flex-direction: row;
+.header {
+  width: 100%;
+}
+
+.card_maker {
+  width: 50%;
+  height: 100%;
+  background-color: pink;
+  overflow-y: auto;
+}
+
+.card_container {
+  width: 50%;
+  height: 100%;
+  background-color: blue;
+}
+
+.footer {
+  height: 2rem;
+  position: fixed;
+  bottom: 0;
   justify-content: center;
-  margin-left: 0.5rem;
-  height: 3rem;
   align-items: center;
-}
-
-.cham_title {
-  position: relative;
-  display: flex;
-  font-size: 1rem;
-  margin: 0.3rem 0.5rem;
-}
-
-.item_title {
-  position: relative;
-  display: flex;
-  font-size: 1rem;
-  margin: 1rem 0.5rem;
+  text-align: center;
 }
