--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -17,14 +17,13 @@
 .card_maker {
   width: 50%;
   height: 100%;
-  background-color: pink;
+
   overflow-y: auto;
 }
 
 .card_container {
   width: 50%;
   height: 100%;
-  background-color: blue;
 }
 
 .footer {
@@ -34,4 +33,17 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+@media screen and (max-width: 80rem) {
+  .card_board {
+    flex-direction: column;
+  }
+
+  .card_maker,
+  .card_container {
+    width: 100%;
+    height: 50%;
+    overflow-y: auto;
+  }
 }
