--- a/src/components/champion/dropdown_menu.css
+++ b/src/components/champion/dropdown_menu.css
@@ -10,10 +10,13 @@
   visibility: hidden;
   margin-left: 1rem;
   overflow: scroll;
+  z-index: 100;
 }
 
 .menu.active {
   opacity: 1;
   visibility: visible;
   transform: translateY(3rem);
+  width: 20rem;
+  height: 22rem;
 }
