--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,7 +6,7 @@
   text-align: center;
   width: 100%;
   height: 7rem;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.363);
 }
 
 .title_part {
