--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,50 +1,103 @@
-.card {
-  width: 100%;
-  height: 100vh;
+* {
+  box-sizing: border-box;
 }
 
-.card_board {
+@font-face {
+  font-family: "lol_regular";
+  src: url(../../font/Friz\ Quadrata\ Std\ Medium.otf);
+}
+
+@font-face {
+  font-family: "lol_italic";
+  src: url(../../font/Friz\ Quadrata\ Italic.ttf);
+}
+
+li {
+  list-style: none;
+}
+
+.card {
+  display: flex;
+  max-width: 30rem;
+  height: 15rem;
+  box-shadow: 8px 3px 3px rgba(128, 128, 128, 0.596);
+  margin: 0 auto;
+  border: 1px solid rgba(211, 211, 211, 0.466);
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+.card.yellow {
+  display: flex;
+  background-color: gold;
+  color: green;
+}
+
+.card.black {
+  display: flex;
+  background-color: black;
+  color: white;
+}
+
+.card.white {
+  display: flex;
+  background-color: white;
+  color: black;
+}
+
+.card_name {
+  font-family: "lol_regular";
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.deck1,
+.deck2 {
+  font-family: "lol_italic";
+  margin: 0;
+  font-size: 1rem;
+}
+
+.item {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  height: 100%;
-}
-
-.header {
-  width: 100%;
-}
-
-.card_maker {
-  width: 50%;
-  height: 100%;
-  overflow-y: auto;
-}
-
-.card_container {
-  width: 30rem;
-  height: 15rem;
-
-  margin: 0 auto;
-}
-
-.footer {
-  height: 2rem;
-  position: fixed;
-  bottom: 0;
-  justify-content: center;
+  flex-wrap: wrap;
+  width: 3rem;
+  height: 3rem;
   align-items: center;
-  text-align: center;
+  justify-content: center;
+  margin: 0 0.15rem;
 }
 
-@media screen and (max-width: 80rem) {
-  .card_board {
-    flex-direction: column;
-  }
+.champion {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 3rem;
+  height: 3rem;
+  margin: 0 0.15rem;
+}
 
-  .card_maker,
-  .card_container {
-    width: 100%;
-    height: 50%;
-    overflow-y: auto;
-  }
+.champion_list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  margin: 0.3rem;
+  padding: 0.3rem 0;
+  border-bottom: 1.5px solid rgba(66, 41, 206, 0.678);
+  border-top: 1.5px solid rgb(66, 41, 206, 0.678);
+}
+
+.item_list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  margin: 0.3rem;
+  padding-bottom: 0.3rem;
+  border-bottom: 1.5px solid rgb(66, 41, 206, 0.678);
 }
