--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -30,3 +30,11 @@
   color: gold;
   font-size: 1.3rem;
 }
+
+.BtnLogout {
+  position: absolute;
+  right: 3em;
+  top: 1em;
+  border-radius: 1rem;
+  cursor: pointer;
+}
