--- a/src/components/addform/addform.module.css
+++ b/src/components/addform/addform.module.css
@@ -1,78 +1,149 @@
-.cardname_form {
+@font-face {
+  font-family: "nanum_bolde";
+  src: url(../../font/NanumGothic-Bold.ttf);
+}
+
+.form {
+  width: 100%;
+  height: 20rem;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  flex-direction: column;
+  border: 1px solid black;
+}
+
+.card_name {
+  display: flex;
+  width: 30%;
+  height: 40%;
+  margin-left: 3rem;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid gray;
+}
+
+.BtnAdd {
+  display: flex;
+  width: 2.5rem;
+  height: 1.3rem;
+  margin: 0.3rem;
+  font-size: 0.5rem;
+  justify-content: center;
   align-items: center;
 }
 
 .cardname_input {
-  width: 12rem;
-  height: 1.5rem;
-}
-
-.BtnInsert {
-  width: 3rem;
-  height: 1.5rem;
-  margin-left: 0.5rem;
-}
-
-.deck_container {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.deck1,
-.deck2 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0.3rem 0.3rem;
-}
-
-.deck1_title,
-.deck2_title {
-  font-size: 0.9rem;
-  margin: 0.5rem 0.3rem;
-}
-
-.deck1_select,
-.deck2_select {
-  width: 7rem;
-  height: 1.5rem;
-}
-
-@media screen and (max-width: 80rem) {
-  .deck_container {
-    flex-direction: column;
-  }
-
-  .deck1,
-  .deck2 {
-    flex-direction: column;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
+  width: 10rem;
+  height: 1.2rem;
+  margin: 0 0.3rem;
 }
 
 .theme {
   display: flex;
-  flex-direction: row;
-  margin: 0.5rem 0.5rem;
+  flex-direction: column;
+  width: 30%;
+  height: 30%;
+  margin-left: 3rem;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.title {
-  font-size: 0.9rem;
-  margin: 0;
-  margin: 0 0.5rem;
+.theme_title {
+  font-size: 0.8rem;
+  font-family: "nanum_bold";
 }
 
 .theme_select {
   width: 7rem;
-  height: 1.2rem;
 }
 
-.champion {
+.deck {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  width: 30%;
+  margin: 1rem 0;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid gray;
+}
+
+.deck1_title,
+.deck2_title {
+  font-family: "nanum_bold";
+  font-size: 0.8rem;
+}
+
+.champion,
+.item {
+  display: flex;
+}
+
+.BtnDelete {
+  display: flex;
+  width: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 80rem) {
+  .card_name {
+    display: flex;
+    width: 10rem;
+    height: 1.5rem;
+    margin: 0.5rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .BtnAdd {
+    display: flex;
+    width: 2.5rem;
+    height: 1.3rem;
+    margin: 0.3rem;
+    font-size: 0.5rem;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .form {
+    width: 30rem;
+    height: 25rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0 0.4rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-right: 1px solid black;
+  }
+
+  .cardname_input {
+    display: flex;
+    width: 5rem;
+    height: 1.2rem;
+    margin: 0 0.3rem;
+  }
+
+  .theme {
+    margin: 0 0.3rem;
+    width: 100%;
+    align-items: center;
+  }
+
+  .theme_title {
+    font-size: 0.8rem;
+    font-family: "nanum_bold";
+  }
+
+  .theme_select {
+    width: 7rem;
+  }
+
+  .deck1_title,
+  .deck2_title {
+    font-family: "nanum_bold";
+    font-size: 0.8rem;
+  }
 }
