--- a/src/components/addform/addform.module.css
+++ b/src/components/addform/addform.module.css
@@ -78,6 +78,15 @@
 .champion,
 .item {
   display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.select_champion {
+  width: 15rem;
+  height: 1rem;
+  font-size: 0.8rem;
+  margin: 0 0.5rem;
 }
 
 .BtnDelete {
