--- a/src/components/card_editor/card_editor.module.css
+++ b/src/components/card_editor/card_editor.module.css
@@ -5,7 +5,7 @@
 
 .form {
   width: 100%;
-  height: 20rem;
+  height: 18rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -15,11 +15,10 @@
 .card_name {
   display: flex;
   width: 30%;
-  height: 40%;
+  height: 30%;
   margin-left: 3rem;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid gray;
 }
 
 .BtnInsert {
@@ -90,11 +89,15 @@
 @media screen and (max-width: 80rem) {
   .card_name {
     display: flex;
-    width: 10rem;
+    width: 50%;
     height: 1.5rem;
     margin: 0.5rem;
     align-items: center;
     justify-content: center;
+  }
+
+  .cardname_input {
+    width: 15rem;
   }
 
   .BtnInsert {
@@ -109,14 +112,13 @@
 
   .form {
     width: 30rem;
-    height: 25rem;
+    height: 20rem;
     display: flex;
     flex-direction: column;
     margin: 0 0.4rem;
     align-items: center;
     justify-content: center;
     text-align: center;
-    border-right: 1px solid black;
   }
 
   .cardname_input {
@@ -127,23 +129,45 @@
   }
 
   .theme {
-    margin: 0 0.3rem;
+    margin: 0;
+    padding: 0;
     width: 100%;
+    height: 20%;
     align-items: center;
   }
 
   .theme_title {
     font-size: 0.8rem;
     font-family: "nanum_bold";
+    margin: 0;
+    margin-bottom: 0.3rem;
   }
 
   .theme_select {
     width: 7rem;
   }
 
+  .deck {
+    margin: 0;
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0.3rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
   .deck1_title,
   .deck2_title {
     font-family: "nanum_bold";
     font-size: 0.8rem;
+    margin: 0;
+    margin: 0.2rem;
+  }
+
+  .champion {
+    height: 10%;
+    margin: 0;
   }
 }
