--- a/src/components/card_maker/card_maker.module.css
+++ b/src/components/card_maker/card_maker.module.css
@@ -16,9 +16,6 @@
   align-items: center;
   background-color: white;
   margin: 0.5rem;
-  width: 41rem;
-  border-radius: 0.5rem;
-  box-shadow: 12px 12px 6px 1px rgba(13, 12, 14, 0.2);
   border: 1px solid lightgray;
   margin: 0 auto;
 }
@@ -111,11 +108,8 @@
     width: 100%;
   }
   .card {
-    flex-direction: row;
-    width: 90%;
-    height: 90%;
+    flex-direction: column;
     justify-content: center;
-    border: 1px solid black;
     align-items: center;
   }
 
