--- a/src/components/addform/addform.module.css
+++ b/src/components/addform/addform.module.css
@@ -4,12 +4,13 @@
 }
 
 .form {
-  width: 100%;
+  width: 90%;
   height: 20rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  border: 1px solid black;
+  border: 1px solid pink;
+  background-color: rgba(255, 255, 255, 0.082);
 }
 
 .card_name {
