--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -30,22 +30,27 @@ li {
   margin-bottom: 0.5rem;
 }
 
-.card.yellow {
+.card.space {
   display: flex;
-  background-color: gold;
-  color: green;
-}
-
-.card.black {
-  display: flex;
-  background-color: black;
-  color: white;
-}
-
-.card.white {
-  display: flex;
-  background-color: white;
+  background-image: url(../../image/card_background_space.jpg);
+  font-family: "lol_regular";
+  text-shadow: 1px 1px 2px skyblue;
   color: black;
+}
+
+.card.judge {
+  display: flex;
+  background-image: url(../../image/card_background_judge_black.jpg);
+  color: white;
+  font-family: "lol_regular";
+}
+
+.card.cartel {
+  display: flex;
+  background-image: url(../../image/card_background_cartel.jpg);
+  font-family: "lol_regular";
+  color: rgb(228, 198, 225);
+  text-shadow: 1px 1px 2px black;
 }
 
 .card_name {
