--- a/src/components/card_editor/card_editor.module.css
+++ b/src/components/card_editor/card_editor.module.css
@@ -4,12 +4,13 @@
 }
 
 .form {
-  width: 100%;
+  width: 90%;
   height: 18rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  border: 1px solid black;
+  border: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.171);
 }
 
 .card_name {
@@ -83,8 +84,8 @@
   display: flex;
   flex-direction: row;
   margin: 0.2rem;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   border-radius: 2px;
   padding: 0.2rem;
   align-items: center;
