--- a/src/components/card_maker/card_maker.module.css
+++ b/src/components/card_maker/card_maker.module.css
@@ -5,7 +5,7 @@
 
 .card_maker {
   height: 100%;
-  background-color: white;
+  background-color: transparent;
   justify-content: center;
 }
 
@@ -14,9 +14,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: white;
   margin: 0.5rem;
-  border: 1px solid lightgray;
+
   margin: 0 auto;
 }
 
@@ -26,6 +25,7 @@
   font-family: "lol_regular";
   margin: 0;
   margin: 0.5rem 0;
+  color: white;
 }
 
 .select_part {
