--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -8,6 +8,7 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
+  background-image: url(../../image/background_gradient.jpg);
 }
 
 .header {
