--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,7 +6,11 @@
   text-align: center;
   width: 100%;
   height: 7rem;
-  background-color: rgba(0, 0, 0, 0.363);
+  background-color: black;
+}
+
+.header_img {
+  height: 20rem;
 }
 
 .title_part {
