--- a/src/components/card_maker/card_maker.module.css
+++ b/src/components/card_maker/card_maker.module.css
@@ -108,7 +108,7 @@
     width: 100%;
   }
   .card {
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
   }
