--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,7 +6,8 @@
   text-align: center;
   width: 100%;
   height: 7rem;
-  background-color: black;
+
+  background: linear-gradient(-2deg, rgb(0, 0, 0), rgb(69, 66, 71));
 }
 
 .header_img {
@@ -36,9 +37,17 @@
 }
 
 .BtnLogout {
+  width: 4rem;
   position: absolute;
   right: 3em;
   top: 1em;
   border-radius: 1rem;
   cursor: pointer;
+  border: none;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: black;
+  color: white;
+  box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.397);
 }
