--- a/src/components/select_champion/select_champion.module.css
+++ b/src/components/select_champion/select_champion.module.css
@@ -1,4 +1,11 @@
 .select {
-  width: 15rem;
-  max-width: 30rem;
+  width: 18rem;
+  max-width: 22rem;
+}
+
+@media screen and (max-width: 80rem) {
+  .select {
+    width: 15rem;
+    height: 3rem;
+  }
 }
