--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -81,8 +81,8 @@ li {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   margin: 0 0.15rem;
 }
 
@@ -115,4 +115,9 @@ li {
   margin: 0.3rem;
   padding-bottom: 0.3rem;
   border-bottom: 1.5px solid rgb(66, 41, 206, 0.678);
+}
+
+.item_img {
+  width: 2rem;
+  height: 2rem;
 }
