--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -83,11 +83,12 @@ li {
   flex-wrap: wrap;
   width: 2.5rem;
   height: 2.5rem;
-  margin: 0 0.15rem;
+  margin: 0 0.2rem;
 }
 
 .cham_name {
   display: flex;
+  font-size: 0.8rem;
   margin: 0.3rem;
 }
 
@@ -120,4 +121,5 @@ li {
 .item_img {
   width: 2rem;
   height: 2rem;
+  margin: 0.3rem;
 }
