--- a/src/components/addform/addform.module.css
+++ b/src/components/addform/addform.module.css
@@ -9,8 +9,9 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  border: 1px solid pink;
-  background-color: rgba(255, 255, 255, 0.082);
+  background-color: rgba(255, 255, 255, 0.164);
+  border-radius: 0.5rem;
+  margin: 1.5rem 0;
 }
 
 .card_name {
@@ -33,8 +34,17 @@
 .cardname_input {
   display: flex;
   width: 10rem;
+  border: none;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.616);
   height: 1.2rem;
   margin: 0 0.3rem;
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+option {
+  font-size: 0.7rem;
 }
 
 .theme {
