--- a/src/components/card_editor/card_editor.module.css
+++ b/src/components/card_editor/card_editor.module.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "nanum_bolde";
+  font-family: "nanum_bold";
   src: url(../../font/NanumGothic-Bold.ttf);
 }
 
@@ -9,17 +9,29 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  border: 1px solid white;
-  background-color: rgba(255, 255, 255, 0.171);
+  background-color: rgba(255, 255, 255, 0.164);
+  border-radius: 0.5rem;
+  margin: 1.5rem 0;
 }
 
 .card_name {
   display: flex;
+  flex-direction: column;
   width: 30%;
-  height: 30%;
+  height: 20%;
   margin-left: 3rem;
   align-items: center;
   justify-content: center;
+  margin: 1.5rem 0 0 3rem;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid gray;
+  padding-bottom: 1.5rem;
+}
+
+.name_title {
+  font-size: 0.8rem;
+  font-family: "nanum_bold";
 }
 
 .BtnInsert {
@@ -34,7 +46,10 @@
 
 .cardname_input {
   display: flex;
-  width: 5rem;
+  width: 7rem;
+  border: none;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.616);
   height: 1.2rem;
   margin: 0 0.3rem;
 }
@@ -43,12 +58,14 @@
   display: flex;
   flex-direction: column;
   width: 30%;
-  height: 30%;
+  height: 20%;
   margin-left: 3rem;
   align-items: center;
   justify-content: center;
   align-items: center;
   text-align: center;
+  border-bottom: 1px solid gray;
+  padding-bottom: 1rem;
 }
 
 .theme_title {
@@ -64,9 +81,12 @@
   display: flex;
   flex-direction: column;
   width: 30%;
-  margin: 1rem 0;
+  height: 30%;
+  margin: 1.5rem 0;
   padding-bottom: 1rem;
-  border-bottom: 1px solid gray;
+  margin-left: 3rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .deck1_title,
@@ -80,6 +100,43 @@
   display: flex;
 }
 
+.champion {
+  flex-wrap: wrap;
+  width: 15rem;
+  margin-top: 1rem;
+  background-color: rgba(255, 255, 255, 0.336);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.champion_container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.selectChampion {
+  display: flex;
+  flex-direction: column;
+  width: 10rem;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.champion_title {
+  font-size: 0.8rem;
+  margin: 0;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin: 0.7rem 0;
+  font-family: "nanum_bold";
+}
+
 .cham_name {
   display: flex;
   flex-direction: row;
@@ -90,13 +147,62 @@
   padding: 0.2rem;
   align-items: center;
   justify-content: center;
+  font-size: 0.7rem;
+  width: 3rem;
+  height: 1rem;
+}
+
+.item {
+  display: flex;
+  flex-wrap: wrap;
+  width: 15rem;
+  margin-top: 1rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.336);
+  border-radius: 0.5rem;
+}
+
+.item_title {
+  font-size: 0.8rem;
+  margin: 0;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0;
+  font-family: "nanum_bold";
+}
+
+.item_img {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 0.2rem;
+}
+
+.deleteBtn_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15rem;
 }
 
 .BtnDelete {
   display: flex;
-  width: 3rem;
+  width: 4.2rem;
+  height: 1.5rem;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 0.7rem;
+  background: none;
+  border: none;
+  background-color: rgb(61, 36, 65);
+  color: white;
+  border-radius: 2px;
+  box-shadow: 1px 2px 2px gray;
 }
 
 @media screen and (max-width: 80rem) {
