--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,8 +6,8 @@
   text-align: center;
   width: 100%;
   height: 7rem;
-
-  background: linear-gradient(-2deg, rgb(0, 0, 0), rgb(69, 66, 71));
+  /* background: linear-gradient(-2deg, rgb(0, 0, 0), rgb(69, 66, 71)); */
+  background-image: url(../../image/background_gradient.jpg);
 }
 
 .header_img {
