--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -7,9 +7,11 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  max-width: 80rem;
   height: 100%;
   background-image: url(../../image/background_gradient.jpg);
   overflow: auto;
+  margin: 0 auto;
 }
 
 .header {
