--- a/src/components/addform/addform.module.css
+++ b/src/components/addform/addform.module.css
@@ -19,21 +19,22 @@
   flex-direction: column;
   width: 20%;
   height: 20%;
-  margin-left: 3rem;
-  margin-top: 1.5rem;
+  margin: 1.5rem 1.5rem 1rem 3rem;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid gray;
 }
 
 .name_title {
+  display: flex;
   font-size: 0.8rem;
   font-family: "nanum_bold";
+  align-items: center;
+  justify-content: center;
 }
 
 .cardname_input {
   display: flex;
-  width: 10rem;
+  width: 9rem;
   border: none;
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.616);
@@ -41,6 +42,10 @@
   margin: 0 0.3rem;
   font-size: 0.8rem;
   text-align: center;
+}
+
+.cardname_input::placeholder {
+  font-size: 0.7rem;
 }
 
 option {
@@ -52,12 +57,11 @@ option {
   flex-direction: column;
   width: 20%;
   height: 20%;
-  margin-left: 3rem;
+  margin-left: 2.5rem;
   align-items: center;
   justify-content: center;
   align-items: center;
   text-align: center;
-  border-bottom: 1px solid gray;
   padding-bottom: 0.7rem;
 }
 
@@ -67,16 +71,16 @@ option {
 }
 
 .theme_select {
-  width: 7rem;
+  width: 6rem;
+  padding: 0.3rem;
 }
 
 .deck {
   display: flex;
   flex-direction: column;
   width: 20%;
-  margin-left: 3rem;
+  margin-left: 2.5rem;
   padding-bottom: 1rem;
-  border-bottom: 1px solid gray;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -86,6 +90,12 @@ option {
 .deck2_title {
   font-family: "nanum_bold";
   font-size: 0.8rem;
+}
+
+.deck1_select,
+.deck2_select {
+  width: 6rem;
+  padding: 0.3rem;
 }
 
 .champion,
@@ -104,11 +114,13 @@ option {
   flex-direction: column;
   width: 30%;
   height: 100%;
-  margin: 1rem 2rem;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 1.5rem 1.2rem;
 }
 
 .select_Champion {
-  width: 25%;
+  width: 20%;
   height: 1rem;
   font-size: 0.8rem;
   margin: 0 0.5rem;
@@ -119,15 +131,19 @@ select {
   -moz-appearance: none;
   appearance: none;
   background: url(../../image/down_row.png) no-repeat 95% 50%;
+  border-radius: 2px;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.274);
+  color: rgb(58, 9, 58);
 }
 
 .item {
   display: flex;
-  width: 30%;
-  margin-right: 3rem;
+  width: 20%;
+  margin-right: 0.5rem;
+  margin-top: 1.5rem;
   flex-direction: column;
   height: 80%;
-  margin: 1rem 1rem;
   align-items: center;
   text-align: center;
   /* justify-content: center; */
@@ -145,63 +161,38 @@ select {
 }
 
 @media screen and (max-width: 80rem) {
-  .card_name {
-    display: flex;
-    width: 10rem;
-    height: 1.5rem;
-    margin: 0.5rem;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .BtnAdd {
-    display: flex;
-    width: 2.5rem;
-    height: 1.3rem;
-    margin: 0.3rem;
-    font-size: 0.5rem;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .form {
-    width: 30rem;
-    height: 25rem;
-    display: flex;
-    flex-direction: column;
-    margin: 0 0.4rem;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    border-right: 1px solid black;
-    margin: 0 auto;
-  }
-
   .cardname_input {
-    display: flex;
-    width: 5rem;
-    height: 1.2rem;
-    margin: 0 0.3rem;
-  }
-
-  .theme {
-    margin: 0 0.3rem;
-    width: 100%;
-    align-items: center;
-  }
-
-  .theme_title {
-    font-size: 0.8rem;
-    font-family: "nanum_bold";
-  }
-
-  .theme_select {
     width: 7rem;
   }
 
-  .deck1_title,
-  .deck2_title {
-    font-family: "nanum_bold";
-    font-size: 0.8rem;
+  .cardname_input::placeholder {
+    font-size: 0.5rem;
+  }
+
+  .card_name,
+  .theme,
+  .deck {
+    border: none;
+  }
+
+  .champion_title,
+  .item {
+    margin-top: 1.7rem;
+  }
+
+  .item {
+    margin-right: 1rem;
+    width: 10rem;
+  }
+
+  .card_name,
+  .theme,
+  .deck {
+    margin-left: 2rem;
+  }
+
+  .champion {
+    margin-left: 2.5rem;
+    margin-right: 1rem;
   }
 }
