--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -34,7 +34,7 @@ li {
   display: flex;
   background-image: url(../../image/card_background_space.jpg);
   font-family: "lol_regular";
-  text-shadow: 1px 1px 2px skyblue;
+  text-shadow: 1px 1px 2px rgb(36, 61, 71);
   color: black;
 }
 
@@ -93,8 +93,8 @@ li {
 }
 
 .champion_img {
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
 .champion_list {
@@ -104,8 +104,8 @@ li {
   width: 100%;
   margin: 0.3rem;
   padding: 0.3rem 0;
-  border-bottom: 1.5px solid rgba(66, 41, 206, 0.678);
-  border-top: 1.5px solid rgb(66, 41, 206, 0.678);
+  border-bottom: 1.5px solid rgba(208, 207, 214, 0.678);
+  border-top: 1.5px solid rgba(208, 207, 214, 0.678);
 }
 
 .item_list {
@@ -115,7 +115,7 @@ li {
   width: 100%;
   margin: 0.3rem;
   padding-bottom: 0.3rem;
-  border-bottom: 1.5px solid rgb(66, 41, 206, 0.678);
+  border-bottom: 1.5px solid rgba(208, 207, 214, 0.678);
 }
 
 .item_img {
