--- a/src/components/card_maker/card_maker.module.css
+++ b/src/components/card_maker/card_maker.module.css
@@ -4,7 +4,8 @@
 }
 
 .card_maker {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
   background-color: transparent;
   justify-content: center;
 }
@@ -14,17 +15,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
   margin: 0.5rem;
   margin: 0 auto;
 }
 
 .title {
+  display: flex;
   font-size: 1.5rem;
   text-align: center;
   font-family: "lol_regular";
   margin: 0;
   margin: 0.5rem 0;
   color: white;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .select_part {
@@ -104,63 +110,10 @@
 
 @media screen and (max-width: 80rem) {
   .card_maker {
-    width: 100%;
+    position: relative;
   }
+
   .card {
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .select_part {
-    height: 90%;
-    align-items: center;
-    width: 30%;
-    border-right: 1px solid gray;
-  }
-
-  .card_top {
-    flex-direction: column;
-    width: 30%;
-    border-bottom: none;
-    margin-top: 0.8rem;
-  }
-
-  .name {
-    border-bottom: none;
-    justify-content: flex-start;
-  }
-
-  .deck {
-    border-bottom: none;
-    flex-direction: column;
-    width: 30%;
-    height: 100%;
-  }
-
-  .champion {
-    height: 90%;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-
-  .cham_title {
-    border-bottom: none;
-    font-size: 0.8rem;
-    margin: 0;
-    position: relative;
-  }
-
-  .selected_cham {
-    border-bottom: none;
-    height: 100%;
-    margin-bottom: 0.5rem;
-    position: relative;
-  }
-
-  .selected_item {
-    border-top: none;
     height: 100%;
   }
 }
