--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,4 +1,6 @@
 .header {
+  position: fixed;
+  top: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -6,12 +8,12 @@
   text-align: center;
   width: 100%;
   height: 7rem;
-  /* background: linear-gradient(-2deg, rgb(0, 0, 0), rgb(69, 66, 71)); */
-  background-image: url(../../image/background_gradient.jpg);
+  /* background-image: url(../../image/background_gradient.jpg); */
+  background-color: rgba(255, 255, 255, 0.363);
 }
 
 .header_img {
-  height: 20rem;
+  height: 4rem;
 }
 
 .title_part {
@@ -29,25 +31,33 @@
   color: white;
   text-decoration: none;
   font-size: 1.2rem;
+  padding: 0.3rem;
+  font-size: 1.3rem;
 }
 
 .link_about:hover {
-  color: gold;
-  font-size: 1.3rem;
+  border: 2px inset rgba(255, 255, 255, 0.384);
+  border-radius: 1.5rem;
 }
 
 .BtnLogout {
   width: 4rem;
+  height: 2rem;
   position: absolute;
   right: 3em;
-  top: 1em;
+  top: 3em;
   border-radius: 1rem;
   cursor: pointer;
   border: none;
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: black;
+  background: transparent;
   color: white;
-  box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.397);
+  border: 1px solid rgba(255, 255, 255, 0.623);
+}
+
+.BtnLogout:hover {
+  transform: scale(1.1);
+  box-shadow: 2px 2px 2px 2px rgba(255, 255, 255, 0.397);
 }
