--- a/src/components/select_champion/select_champion.module.css
+++ b/src/components/select_champion/select_champion.module.css
@@ -8,6 +8,7 @@
 @media screen and (max-width: 80rem) {
   .select {
     width: 10rem;
-    height: 3rem;
+    max-width: 10rem;
+    margin-top: 0.5rem;
   }
 }
