--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -209,10 +209,12 @@
   flex-direction: row;
   z-index: 100;
   position: fixed;
-  bottom: 1rem;
+  bottom: 3rem;
+  left: 40%;
   align-items: center;
   justify-content: center;
-  margin-left: 50rem;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .BtnSlide1,
@@ -223,7 +225,14 @@
   background-color: transparent;
   border-radius: 50%;
   border: none;
-  margin: 1rem;
+  margin: 2rem;
+  cursor: pointer;
+}
+.BtnSlide1:hover,
+.BtnSlide2:hover,
+.BtnSlide3:hover {
+  background-color: white;
+  color: black;
 }
 
 .footer {
