change home page background

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -30,7 +30,7 @@
   position: relative;
   width: 300vw;
   height: 840px;
-  background-color: rgba(0, 0, 0, 0.925);
+  background: transparent;
   overflow: hidden;
 }
 
