--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 7rem;
   /* background-image: url(../../image/background_gradient.jpg); */
-  background-color: rgba(255, 255, 255, 0.363);
+  background-color: transparent;
 }
 
 .header_img {
