--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,5 +1,3 @@
-/* 반응형으로 고치기 */
-
 * {
   box-sizing: border-box;
 }
@@ -17,6 +15,13 @@
 @font-face {
   font-family: "nanum_bold";
   src: url(../../font/NanumGothic-Bold.ttf);
+}
+
+.body {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background-image: url(../../image/login_background.jpg);
 }
 
 .login_container {
@@ -41,6 +46,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-color: rgba(255, 255, 255, 0.849);
 }
 
 .title {
