--- a/src/components/addform/addform.module.css
+++ b/src/components/addform/addform.module.css
@@ -153,11 +153,22 @@ select {
   display: flex;
   width: 3rem;
   height: 1.5rem;
+  font-size: 0.8rem;
   align-items: center;
   justify-content: center;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
+  background-color: rgba(95, 97, 221, 0.521);
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  transition: all 100ms ease;
+}
+
+.BtnAdd:hover {
+  transform: scale(1.05);
 }
 
 @media screen and (max-width: 80rem) {
